Mon,  5 Feb 2007 17:47:07 +0100 <thp@perli.net>
        * src/gpodder/libgpodder.py: Applied patch from Mike Coulson 
          (miketcoulson gmail com) to fix lexists fallback bug related to 
          late logger import - thanks!
        * AUTHORS: Added Mike Coulson to list of patch writers
        * bin/gpodder: Pushed version + svn release date

Sun,  4 Feb 2007 10:38:27 +0100 <thp@perli.net>
        * src/gpodder/liblogger.py: Write log output to stdout again
        * bin/gpodder: Version is now a "+svn" version again as we're 
          slowly progressing towards 0.9.0
        * data/po/pt.po: Updated Portuguese (pt) translation, thanks to
          Joel Calado (joelcalado gmail.com) who did the translation

Sat,  3 Feb 2007 11:59:34 +0100 <thp@perli.net>
        * src/gpodder/liblogger.py: Don't write log output to stdout 
          because we're doing a release today :)

Sat,  3 Feb 2007 11:55:37 +0100 <thp@perli.net>
        * doc/man/gpodder.1: Updated manpage for 0.8.9 release
        * bin/gpodder: Version + date for 0.8.9 release
        * README: 0.8.9 release info

Sat,  3 Feb 2007 11:46:49 +0100 <thp@perli.net>
        * src/gpodder/libwget.py: Add has_items() to downloadStatusManager
        * src/gpodder/libgpodder.py: Make deleting partial downloads optional
        * src/gpodder/gpodder.py: Only ask gPodderLib to delete partially 
          downloaded files when our downloadStatusManager does not have any 
          downloads going at the moment (bugfix!)

Sun, 28 Jan 2007 16:17:40 +0100 <thp@perli.net>
        * src/gpodder/libgpodder.py: Comment-out deletion of partial 
          downloads for now (so we won't have broken, finished downloads)
        * src/gpodder/gpodder.py.orig: Updated by tepache
        * data/messages.pot: Updated from source code files
        * data/po/de.po: Updated German translation

Sun, 28 Jan 2007 10:20:26 +0100 <thp@perli.net>
        * src/gpodder/libipodsync.py: Fixed a small encoding warning