@@ -12,6 +12,9 @@
 
  === Todo List for gPodder post-0.9.0 ===
 
+ * Finally, could it mark via a different color code when a podcast
+   has been played. (John Connor; johnc.connor gmail.com)
+
  * First, please don't use hard coded background colors when you use the
    foreground color from the current gtk theme at the same time. Right now
    you assume people always have a theme with dark text color, which is
