@@ -1,3 +1,9 @@
+Sat, 24 Feb 2007 13:02:51 +0100 <thp@perli.net>
+        * src/gpodder/gpodder.py: Scroll down to last position after 
+          starting a download in the available podcasts tab
+        * bin/gpodder: Version + svn release date push
+        * TODO: Updated TODO list
+
 Mon,  5 Feb 2007 17:47:07 +0100 <thp@perli.net>
         * src/gpodder/libgpodder.py: Applied patch from Mike Coulson 
           (miketcoulson gmail com) to fix lexists fallback bug related to 
